# klipa

./: .gitignore  Cargo.toml  LICENSE  PRESS_KIT_PROMPT.md  README.md
.github/workflows/: ci.yml  release.yml
Casks/: klipa.rb
bucket/: klipa.json
crates/klipa-core/: Cargo.toml
crates/klipa-core/src/: lib.rs
crates/klipa-core/src/domain/: entities.rs  error.rs  mod.rs  ports.rs
crates/klipa-core/src/usecases/: history.rs  mod.rs  search.rs  sorter.rs
crates/klipa-ui/: Cargo.toml  build.rs
crates/klipa-ui/src/: app.rs  awake.rs  hotkey.rs  http.rs  license.rs  main.rs  paths.rs  platform.rs  settings.rs  tray.rs  updater.rs  weather.rs
crates/klipa-ui/src/adapters/: clipboard.rs  mod.rs  storage.rs  watcher.rs
crates/klipa-ui/ui/: main.slint
docs/: CNAME  index.html  press.html  privacy.html  release-secrets.md  welcome.html
packaging/: README.md
packaging/aur/: .SRCINFO  PKGBUILD
packaging/icons/: klipa.icns
packaging/linux/: klipa.desktop
packaging/macos/: Info.plist  entitlements.mas.plist  entitlements.plist
packaging/windows/: klipa.nsi
packaging/winget/: dev.peterdsp.klipa.installer.yaml  dev.peterdsp.klipa.locale.en-US.yaml  dev.peterdsp.klipa.yaml
scripts/: bundle-macos.sh  make-icons.sh  package-linux.sh  package-macos.sh  package-mas.sh  package-windows.ps1  png2ico.py  update-package-managers.sh
scripts/pi-license-server/: README.md
