[workspace]
members = ["crates/klipa-core", "crates/klipa-ui"]
resolver = "2"

[workspace.package]
version = "0.4.4"
edition = "2021"
license = "MIT"
authors = ["klipa authors"]
repository = "https://github.com/peterdsp/klipa"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

# Release profile tuned for size + low runtime overhead.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
