[package]
name = "klipa-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
fuzzy-matcher = "0.3"
regex = "1"
time = { version = "0.3", features = ["serde", "formatting"] }

[dev-dependencies]
tokio = { workspace = true }
