[package]
name = "klipa-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
# Runtime-agnostic async RwLock — keeps klipa-core free of any async
# runtime (no tokio) while still allowing the state lock to be held
# across .await points.
async-lock = "3"
uuid = { version = "1", features = ["v4", "serde"] }
fuzzy-matcher = "0.3"
regex = "1"
time = { version = "0.3", features = ["serde", "formatting"] }

[dev-dependencies]
tokio = { workspace = true }
