[package]
name = "klipa-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "klipa"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.8"

[dependencies]
klipa-core = { path = "../klipa-core" }
# Use the `compat-1-2` feature set with the femtovg renderer for the
# smallest cross-platform binary that still gives us GPU acceleration.
slint = { version = "1.8", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "renderer-femtovg",
] }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
arboard = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
global-hotkey = "0.5"
tray-icon = "0.19"
active-win-pos-rs = "0.9"

# macOS-only: convert the process to a menubar accessory app
# (no dock icon, no main menu) by calling
# NSApplication.setActivationPolicy(.accessory) at startup.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication"] }
objc2-foundation = "0.2"
